# markov-ts

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  index.ts  package-lock.json  package.json
src/: main.rs  markov.rs  schema.rs
